# apollo

./: .pylintrc  README.md  cli.py  exceptions.py  imgs.py  installers.py  machine.py  main.py  post_installers.py  printer.py  pyproject.toml  tests.py
files/neovim/: init.vim
files/tmux/: .tmux.conf
old/: cli.py  exceptions.py  installers.py  post_installers.py
old/files/fish/: fish_greeting.fish
old/files/neovim/: init.vim
