[tool.poetry]
name = "apollo"
version = "0.1.0"
description = "Script to set up a newly installed ubuntu machine"
authors = ["Axel Rodríguez Chang"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
